# ow-sales-intelligence

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  company_detail_logic.py  data_loader.py  exceptions.py  export_logic.py  naics_rankings_logic.py  quality_gates.py  ranked_companies_logic.py  streamlit_app.py
app/components/: __init__.py  empty_states.py  filters.py  heat_map.py  research_viewer.py  score_display.py
app/pages/: 0_naics_rankings.py  1_ranked_companies.py  2_company_detail.py
data/config/: channels.yaml  exclusions.yaml  naics_config.yaml  naics_target.yaml  sqft_codes.yaml
data/processed/: buildings.csv  contact_summary.csv  entity_resolution_log.csv  golden_buildings.csv  penetration_by_company.csv
data/raw/: hubspot_contracts.csv  hubspot_interactions.csv  hubspot_leads.csv
data/scoring/: naics_icp_fit_scores.csv  naics_metrics.csv  scored_companies.csv  scored_companies_final.csv
docs/: Data_Pipeline_Quick_Reference.html  Data_Pipeline_Quick_Reference.md
